# AutomatedCiliaMeasurements

./: .flake8  .gitignore  README.md  calc.py  center2center.py  centrioles_without_cells.py  check_accuracy.py  cilia_pipeline_Aug3_RT.cpproj  cilia_pipeline_v1.cpproj  cilia_pipeline_v2.cpproj  cilia_pipeline_v4.cpproj  cilia_pipeline_v5.cpproj  clustering.py  data_table.py  file.txt  image_checker.py  label_c2c.py  label_cp_im.py  label_cprof_im.py  label_on_merged.py  label_valid_cilia.py  launcher.py  make_histogram.py  merge_cilia.py  pixels_to_measurement.py  preprocess_image_names.py  pyproject.toml  runner.py  sandbox.py  size_filter.py  summary_data.html  summary_data.py  temp-plot.html  test.tiff  user_guide.txt  vis_cilia_to_cent.py  visualize.py  visualize_new.py
automated_cilia_measurements/: center2center.py  check_accuracy.py  cluster_as_one.py  clustering.py  data_table.py  gui.py  image_checker.py  label_c2c.py  label_cprof_im.py  label_valid_cilia.py  launcher.py  make_relations_df.py  pixels_to_measurement.py  standalone_bokeh.py  standalone_clustering_test.py  standalone_cprof_label.py  summary_data.py  summary_measurements.py
release/: README.md
release/Linux and Mac/: install.sh
release/Linux_and_Mac/: gui.sh
release/Windows/: gui.ps1  install.ps1
sample_csvs/: MyExpt_Centriole.csv  MyExpt_Cilia.csv  MyExpt_Experiment.csv  MyExpt_Image.csv  MyExpt_Nucleus.csv
sample_im/: CentrioleOverlay0001.tiff  CentrioleOverlay0002.tiff  CentrioleOverlay0003.tiff  CentrioleOverlay0004.tiff  CentrioleOverlay0005.tiff  CentrioleOverlay0006.tiff  CentrioleOverlay0007.tiff  CentrioleOverlay0008.tiff  CentrioleOverlay0009.tiff  CentrioleOverlay0010.tiff  CentrioleOverlay0011.tiff  CentrioleOverlay0012.tiff  CentrioleOverlay0013.tiff  CentrioleOverlay0014.tiff  CentrioleOverlay0015.tiff  CentrioleOverlay0016.tiff  CentrioleOverlay0017.tiff  CentrioleOverlay0018.tiff  CentrioleOverlay0019.tiff  CentrioleOverlay0020.tiff  CentrioleOverlay0021.tiff  CentrioleOverlay0022.tiff  CentrioleOverlay0023.tiff  CentrioleOverlay0024.tiff  CentrioleOverlay0025.tiff  CiliaOverlay0001.tiff  CiliaOverlay0002.tiff  CiliaOverlay0003.tiff  CiliaOverlay0004.tiff  CiliaOverlay0005.tiff  CiliaOverlay0006.tiff  CiliaOverlay0007.tiff  CiliaOverlay0008.tiff  CiliaOverlay0009.tiff  CiliaOverlay0010.tiff  CiliaOverlay0011.tiff  CiliaOverlay0012.tiff  CiliaOverlay0013.tiff  CiliaOverlay0014.tiff  CiliaOverlay0015.tiff  (+46 more)
sample_im/combinedim/: CombinedIm0001.tiff  CombinedIm0003.tiff  CombinedIm0009.tiff  CombinedIm0012.tiff  CombinedIm0013.tiff  CombinedIm0015.tiff  CombinedIm0016.tiff  CombinedIm0017.tiff  CombinedIm0018.tiff  CombinedIm0019.tiff  CombinedIm0020.tiff  CombinedIm0021.tiff  CombinedIm0022.tiff  CombinedIm0023.tiff
